Remove daemonset and pod
